simple_client/client-envoy.yaml
static_resources:
  listeners:
  # listener_0 accepts a raw TCP stream from the local TCP client.
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 127.0.0.1
        port_value: 7777
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite_literal: CLOUD_RUN_SERVICE_HOSTNAME
                  cluster: cluster_1
          http_filters:
          - name: envoy.filters.http.router

  clusters:
    # cluster_1 proxies HTTP stream with a TLS HTTP/2 stream to Cloud Run.
    - name: cluster_1
      connect_timeout: 5s
      type: LOGICAL_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: cluster_1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: CLOUD_RUN_SERVICE_HOSTNAME
                      port_value: 443
                      # For local testing, use the following IP:port
                      #address: 0.0.0.0
                      #port_value: 8080
      # For local testing, remove the following TLS socket.
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: CLOUD_RUN_SERVICE_HOSTNAME
